--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "url": "https://github.com/lucaswadedavis/imtihan/issues"
   },
   "dependencies": {
-    "body-parser": "~1.12.4"
+    "body-parser": "~1.12.4",
+    "magog": "0.0.0",
+    "rezi": "~1.0.0"
   }
 }
